# symbolipy

./: .bumpversion.cfg  LICENSE  README.md  pyproject.toml  setup.py
symbolipy/: __init__.py  symbol_interface.py
test/: test_symbol.py
